Bug 1152236: OMX codec should use AnnexB as input format. r=jya